--- a/Lab2/Road_Lines.ipynb
+++ b/Lab2/Road_Lines.ipynb
@@ -171,9 +171,11 @@
     "event = traffic_sublayer\n",
     "\n",
     "#Completeness/Logical Consistency. Check if traffic layer goes farther than no traffic.\n",
+    "#Thematic Check for the same fields\n",
     "# Get the extent of each dataset\n",
     "baseline_ext = arcpy.Describe(baseline).extent\n",
     "event_ext = arcpy.Describe(event).extent\n",
+    "#Get describe object to find fields\n",
     "describe_baseline = arcpy.Describe(baseline)\n",
     "describe_event = arcpy.Describe(event)\n",
     "\n",
