--- a/Lab3/Elevation_Lab3.ipynb
+++ b/Lab3/Elevation_Lab3.ipynb
@@ -195,7 +195,7 @@
     "        spatial_reference=arcpy.Describe(elev_data).spatialReference\n",
     "    )\n",
     "\n",
-    "# Get fields from the temperature data and add them to the feature classes\n",
+    "# Get fields from the data and add them to the feature classes\n",
     "fields = [field.name for field in arcpy.ListFields(elev_data) if field.type not in [\"OID\", \"Geometry\"]]\n",
     "for field_name in fields:\n",
     "    for fc in [training_fc, testing_fc]:\n",
